--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
-.pre-header{
-    background-color: #111618;
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.header {
+    background-color: #00010d;
+    color: #fff;
+    text-transform: uppercase;
+    padding-top: 20px;
 }
